--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+.DS_Store
+UserSettings/EditorUserSettings.asset
+UserSettings/Layouts/default-2021.dwlt
