--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ crashlytics-build.properties
 .DS_Store
 UserSettings/EditorUserSettings.asset
 UserSettings/Layouts/default-2021.dwlt
+UserSettings/Search.settings
